--- a/sub.ipynb
+++ b/sub.ipynb
@@ -9,9 +9,10 @@
     "import pandas as pd\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "import joblib\n",
+    "import os\n",
     "\n",
-    "kaggle_input=\"./kaggle/input\"\n",
-    "kaggle_working=\"./kaggle/working\"\n",
+    "kaggle_input=\"../kaggle/input\"\n",
+    "kaggle_working=\"../kaggle/working\"\n",
     "\n",
     "pd.set_option('display.max_rows', 10)\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -814,6 +815,8 @@
    ],
    "source": [
     "# train the models\n",
+    "os.mkdir(f'{kaggle_working}/models')\n",
+    "\n",
     "f_train=pd.read_csv(f\"{kaggle_working}/f_train.csv\")\n",
     "# f_train=f_train.iloc[:int(len(f_train)*plen),:]\n",
     "f_train.fillna(method='bfill',inplace=True)\n",
@@ -858,7 +861,9 @@
     "p_votes=pd.concat([f_test['eeg_id'],p_votes],axis=1)\n",
     "\n",
     "# writing sub file\n",
-    "p_votes.to_csv(f'{kaggle_working}/submission.csv',index=False)\n"
+    "p_votes.to_csv(f'{kaggle_working}/submission.csv',index=False)\n",
+    "\n",
+    "print(\"done\")"
    ]
   },
   {
