--- a/format_data.ipynb
+++ b/format_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'checkpoint data='"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -103,11 +112,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>spectrogram_id</th>\n",
        "      <th>eeg_id</th>\n",
-       "      <th>patient_id</th>\n",
-       "      <th>LL_1.37savg0</th>\n",
-       "      <th>LL_1.37savg1</th>\n",
+       "      <th>eeg_sub_id</th>\n",
+       "      <th>eeg_label_offset_seconds</th>\n",
+       "      <th>spectrogram_id</th>\n",
+       "      <th>spectrogram_sub_id</th>\n",
        "      <th>...</th>\n",
        "      <th>RP_19.92savg55</th>\n",
        "      <th>RP_19.92savg56</th>\n",
@@ -119,39 +128,216 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>853520</td>\n",
-       "      <td>3911565283</td>\n",
-       "      <td>6885</td>\n",
-       "      <td>5.772</td>\n",
-       "      <td>4.608</td>\n",
+       "      <td>1628180742</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>353733</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.156</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>0.218</td>\n",
-       "      <td>0.368</td>\n",
-       "      <td>0.368</td>\n",
+       "      <td>0.132000</td>\n",
+       "      <td>0.166000</td>\n",
+       "      <td>0.128000</td>\n",
+       "      <td>0.136000</td>\n",
+       "      <td>0.212000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1628180742</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>353733</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.132000</td>\n",
+       "      <td>0.166000</td>\n",
+       "      <td>0.128000</td>\n",
+       "      <td>0.136000</td>\n",
+       "      <td>0.212000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1628180742</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>353733</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.132000</td>\n",
+       "      <td>0.166000</td>\n",
+       "      <td>0.128000</td>\n",
+       "      <td>0.136000</td>\n",
+       "      <td>0.212000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1628180742</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>353733</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.132000</td>\n",
+       "      <td>0.166000</td>\n",
+       "      <td>0.128000</td>\n",
+       "      <td>0.136000</td>\n",
+       "      <td>0.212000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1628180742</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>353733</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.132000</td>\n",
+       "      <td>0.166000</td>\n",
+       "      <td>0.128000</td>\n",
+       "      <td>0.136000</td>\n",
+       "      <td>0.212000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49995</th>\n",
+       "      <td>1496922706</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>975570087</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.048000</td>\n",
+       "      <td>0.058000</td>\n",
+       "      <td>0.054000</td>\n",
+       "      <td>0.048000</td>\n",
+       "      <td>0.046000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49996</th>\n",
+       "      <td>1496922706</td>\n",
+       "      <td>3</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>975570087</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.048000</td>\n",
+       "      <td>0.058000</td>\n",
+       "      <td>0.054000</td>\n",
+       "      <td>0.048000</td>\n",
+       "      <td>0.046000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49997</th>\n",
+       "      <td>2384240622</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>975636325</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>370.125995</td>\n",
+       "      <td>377.317999</td>\n",
+       "      <td>416.862006</td>\n",
+       "      <td>417.716003</td>\n",
+       "      <td>421.551996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49998</th>\n",
+       "      <td>2384240622</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>975636325</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>370.125995</td>\n",
+       "      <td>377.317999</td>\n",
+       "      <td>416.862006</td>\n",
+       "      <td>417.716003</td>\n",
+       "      <td>421.551996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49999</th>\n",
+       "      <td>2384240622</td>\n",
+       "      <td>2</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>975636325</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>370.125995</td>\n",
+       "      <td>377.317999</td>\n",
+       "      <td>416.862006</td>\n",
+       "      <td>417.716003</td>\n",
+       "      <td>421.551996</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 4803 columns</p>\n",
+       "<p>50000 rows × 4815 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   spectrogram_id      eeg_id  patient_id  LL_1.37savg0  LL_1.37savg1  ...  \\\n",
-       "0          853520  3911565283        6885         5.772         4.608  ...   \n",
+       "           eeg_id  eeg_sub_id  eeg_label_offset_seconds  spectrogram_id  \\\n",
+       "0      1628180742           0                       0.0          353733   \n",
+       "1      1628180742           1                       6.0          353733   \n",
+       "2      1628180742           2                       8.0          353733   \n",
+       "3      1628180742           3                      18.0          353733   \n",
+       "4      1628180742           4                      24.0          353733   \n",
+       "...           ...         ...                       ...             ...   \n",
+       "49995  1496922706           2                      18.0       975570087   \n",
+       "49996  1496922706           3                      28.0       975570087   \n",
+       "49997  2384240622           0                       0.0       975636325   \n",
+       "49998  2384240622           1                      42.0       975636325   \n",
+       "49999  2384240622           2                      60.0       975636325   \n",
        "\n",
-       "   RP_19.92savg55  RP_19.92savg56  RP_19.92savg57  RP_19.92savg58  \\\n",
-       "0           0.156            0.19           0.218           0.368   \n",
+       "       spectrogram_sub_id  ...  RP_19.92savg55  RP_19.92savg56  \\\n",
+       "0                       0  ...        0.132000        0.166000   \n",
+       "1                       1  ...        0.132000        0.166000   \n",
+       "2                       2  ...        0.132000        0.166000   \n",
+       "3                       3  ...        0.132000        0.166000   \n",
+       "4                       4  ...        0.132000        0.166000   \n",
+       "...                   ...  ...             ...             ...   \n",
+       "49995                   2  ...        0.048000        0.058000   \n",
+       "49996                   3  ...        0.048000        0.058000   \n",
+       "49997                   0  ...      370.125995      377.317999   \n",
+       "49998                   1  ...      370.125995      377.317999   \n",
+       "49999                   2  ...      370.125995      377.317999   \n",
        "\n",
-       "   RP_19.92savg59  \n",
-       "0           0.368  \n",
+       "       RP_19.92savg57 RP_19.92savg58  RP_19.92savg59  \n",
+       "0            0.128000       0.136000        0.212000  \n",
+       "1            0.128000       0.136000        0.212000  \n",
+       "2            0.128000       0.136000        0.212000  \n",
+       "3            0.128000       0.136000        0.212000  \n",
+       "4            0.128000       0.136000        0.212000  \n",
+       "...               ...            ...             ...  \n",
+       "49995        0.054000       0.048000        0.046000  \n",
+       "49996        0.054000       0.048000        0.046000  \n",
+       "49997      416.862006     417.716003      421.551996  \n",
+       "49998      416.862006     417.716003      421.551996  \n",
+       "49999      416.862006     417.716003      421.551996  \n",
        "\n",
-       "[1 rows x 4803 columns]"
+       "[50000 rows x 4815 columns]"
       ]
      },
-     "execution_count": 87,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['f_data_cp#115.csv', 'f_data_cp#116.csv']\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -161,7 +347,7 @@
     "train_data=pd.read_csv(f\"{kaggle_input}/train.csv\")\n",
     "test_data=pd.read_csv(f\"{kaggle_input}/test.csv\")\n",
     "f_names=['f_train.csv','f_test.csv']\n",
-    "fi=1\n",
+    "fi=0\n",
     "\n",
     "f_data=train_data.copy() if fi==0 else test_data.copy()\n",
     "if fi==0:\n",
@@ -223,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
