--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,71 +72,71 @@
        "      <th>0</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.132</td>\n",
-       "      <td>0.166</td>\n",
-       "      <td>0.128</td>\n",
-       "      <td>0.136</td>\n",
-       "      <td>0.212</td>\n",
+       "      <td>0.132000</td>\n",
+       "      <td>0.166000</td>\n",
+       "      <td>0.128000</td>\n",
+       "      <td>0.136000</td>\n",
+       "      <td>0.212000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.132</td>\n",
-       "      <td>0.166</td>\n",
-       "      <td>0.128</td>\n",
-       "      <td>0.136</td>\n",
-       "      <td>0.212</td>\n",
+       "      <td>0.132000</td>\n",
+       "      <td>0.166000</td>\n",
+       "      <td>0.128000</td>\n",
+       "      <td>0.136000</td>\n",
+       "      <td>0.212000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.132</td>\n",
-       "      <td>0.166</td>\n",
-       "      <td>0.128</td>\n",
-       "      <td>0.136</td>\n",
-       "      <td>0.212</td>\n",
+       "      <td>0.132000</td>\n",
+       "      <td>0.166000</td>\n",
+       "      <td>0.128000</td>\n",
+       "      <td>0.136000</td>\n",
+       "      <td>0.212000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.132</td>\n",
-       "      <td>0.166</td>\n",
-       "      <td>0.128</td>\n",
-       "      <td>0.136</td>\n",
-       "      <td>0.212</td>\n",
+       "      <td>0.132000</td>\n",
+       "      <td>0.166000</td>\n",
+       "      <td>0.128000</td>\n",
+       "      <td>0.136000</td>\n",
+       "      <td>0.212000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.132</td>\n",
-       "      <td>0.166</td>\n",
-       "      <td>0.128</td>\n",
-       "      <td>0.136</td>\n",
-       "      <td>0.212</td>\n",
+       "      <td>0.132000</td>\n",
+       "      <td>0.166000</td>\n",
+       "      <td>0.128000</td>\n",
+       "      <td>0.136000</td>\n",
+       "      <td>0.212000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -153,124 +153,124 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11495</th>\n",
+       "      <th>67995</th>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.012</td>\n",
-       "      <td>0.020</td>\n",
-       "      <td>0.018</td>\n",
+       "      <td>3.352000</td>\n",
+       "      <td>2.532000</td>\n",
+       "      <td>1.470000</td>\n",
+       "      <td>2.022000</td>\n",
+       "      <td>1.590000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11496</th>\n",
+       "      <th>67996</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.166667</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.166667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.012</td>\n",
-       "      <td>0.020</td>\n",
-       "      <td>0.018</td>\n",
+       "      <td>0.034000</td>\n",
+       "      <td>0.218000</td>\n",
+       "      <td>1.174000</td>\n",
+       "      <td>2.354000</td>\n",
+       "      <td>0.034000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11497</th>\n",
+       "      <th>67997</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.166667</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.166667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.012</td>\n",
-       "      <td>0.020</td>\n",
-       "      <td>0.018</td>\n",
+       "      <td>2072.209961</td>\n",
+       "      <td>2065.580005</td>\n",
+       "      <td>2200.430029</td>\n",
+       "      <td>2051.482007</td>\n",
+       "      <td>2411.711987</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11498</th>\n",
+       "      <th>67998</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.166667</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.166667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.012</td>\n",
-       "      <td>0.020</td>\n",
-       "      <td>0.018</td>\n",
+       "      <td>2072.209961</td>\n",
+       "      <td>2065.580005</td>\n",
+       "      <td>2200.430029</td>\n",
+       "      <td>2051.482007</td>\n",
+       "      <td>2411.711987</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11499</th>\n",
+       "      <th>67999</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.166667</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.166667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.012</td>\n",
-       "      <td>0.020</td>\n",
-       "      <td>0.018</td>\n",
+       "      <td>2072.209961</td>\n",
+       "      <td>2065.580005</td>\n",
+       "      <td>2200.430029</td>\n",
+       "      <td>2051.482007</td>\n",
+       "      <td>2411.711987</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>11500 rows × 4806 columns</p>\n",
+       "<p>68000 rows × 4806 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       seizure_vote  lpd_vote  gpd_vote  lrda_vote  grda_vote  ...  \\\n",
-       "0               1.0       0.0  0.000000        0.0   0.000000  ...   \n",
-       "1               1.0       0.0  0.000000        0.0   0.000000  ...   \n",
-       "2               1.0       0.0  0.000000        0.0   0.000000  ...   \n",
-       "3               1.0       0.0  0.000000        0.0   0.000000  ...   \n",
-       "4               1.0       0.0  0.000000        0.0   0.000000  ...   \n",
+       "0               1.0       0.0       0.0        0.0        0.0  ...   \n",
+       "1               1.0       0.0       0.0        0.0        0.0  ...   \n",
+       "2               1.0       0.0       0.0        0.0        0.0  ...   \n",
+       "3               1.0       0.0       0.0        0.0        0.0  ...   \n",
+       "4               1.0       0.0       0.0        0.0        0.0  ...   \n",
        "...             ...       ...       ...        ...        ...  ...   \n",
-       "11495           0.0       0.0  0.000000        0.0   0.000000  ...   \n",
-       "11496           0.0       0.0  0.166667        0.0   0.166667  ...   \n",
-       "11497           0.0       0.0  0.166667        0.0   0.166667  ...   \n",
-       "11498           0.0       0.0  0.166667        0.0   0.166667  ...   \n",
-       "11499           0.0       0.0  0.166667        0.0   0.166667  ...   \n",
+       "67995           1.0       0.0       0.0        0.0        0.0  ...   \n",
+       "67996           0.0       0.0       0.0        0.0        0.0  ...   \n",
+       "67997           0.0       0.0       0.0        0.0        1.0  ...   \n",
+       "67998           0.0       0.0       0.0        0.0        1.0  ...   \n",
+       "67999           0.0       0.0       0.0        0.0        1.0  ...   \n",
        "\n",
        "       RP_19.92savg55  RP_19.92savg56  RP_19.92savg57  RP_19.92savg58  \\\n",
-       "0               0.132           0.166           0.128           0.136   \n",
-       "1               0.132           0.166           0.128           0.136   \n",
-       "2               0.132           0.166           0.128           0.136   \n",
-       "3               0.132           0.166           0.128           0.136   \n",
-       "4               0.132           0.166           0.128           0.136   \n",
+       "0            0.132000        0.166000        0.128000        0.136000   \n",
+       "1            0.132000        0.166000        0.128000        0.136000   \n",
+       "2            0.132000        0.166000        0.128000        0.136000   \n",
+       "3            0.132000        0.166000        0.128000        0.136000   \n",
+       "4            0.132000        0.166000        0.128000        0.136000   \n",
        "...               ...             ...             ...             ...   \n",
-       "11495           0.014           0.014           0.012           0.020   \n",
-       "11496           0.014           0.014           0.012           0.020   \n",
-       "11497           0.014           0.014           0.012           0.020   \n",
-       "11498           0.014           0.014           0.012           0.020   \n",
-       "11499           0.014           0.014           0.012           0.020   \n",
+       "67995        3.352000        2.532000        1.470000        2.022000   \n",
+       "67996        0.034000        0.218000        1.174000        2.354000   \n",
+       "67997     2072.209961     2065.580005     2200.430029     2051.482007   \n",
+       "67998     2072.209961     2065.580005     2200.430029     2051.482007   \n",
+       "67999     2072.209961     2065.580005     2200.430029     2051.482007   \n",
        "\n",
        "       RP_19.92savg59  \n",
-       "0               0.212  \n",
-       "1               0.212  \n",
-       "2               0.212  \n",
-       "3               0.212  \n",
-       "4               0.212  \n",
+       "0            0.212000  \n",
+       "1            0.212000  \n",
+       "2            0.212000  \n",
+       "3            0.212000  \n",
+       "4            0.212000  \n",
        "...               ...  \n",
-       "11495           0.018  \n",
-       "11496           0.018  \n",
-       "11497           0.018  \n",
-       "11498           0.018  \n",
-       "11499           0.018  \n",
+       "67995        1.590000  \n",
+       "67996        0.034000  \n",
+       "67997     2411.711987  \n",
+       "67998     2411.711987  \n",
+       "67999     2411.711987  \n",
        "\n",
-       "[11500 rows x 4806 columns]"
+       "[68000 rows x 4806 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "Length: 4806, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,37 +315,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training seizure_vote model\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "trained and saved at ./kaggle/temp1/models/seizure_vote.joblib\n",
-      "--- 229.48156666755676 seconds --- for seizure_vote model\n",
-      "training lpd_vote model\n",
-      "trained and saved at ./kaggle/temp1/models/lpd_vote.joblib\n",
-      "--- 121.6918351650238 seconds --- for lpd_vote model\n",
       "training gpd_vote model\n",
       "trained and saved at ./kaggle/temp1/models/gpd_vote.joblib\n",
-      "--- 141.7476761341095 seconds --- for gpd_vote model\n",
+      "--- 1543.0944006443024 seconds --- for gpd_vote model\n",
       "training lrda_vote model\n",
       "trained and saved at ./kaggle/temp1/models/lrda_vote.joblib\n",
-      "--- 125.15187954902649 seconds --- for lrda_vote model\n",
-      "training grda_vote model\n",
-      "trained and saved at ./kaggle/temp1/models/grda_vote.joblib\n",
-      "--- 126.58544492721558 seconds --- for grda_vote model\n",
-      "training other_vote model\n",
-      "trained and saved at ./kaggle/temp1/models/other_vote.joblib\n",
-      "--- 131.47505402565002 seconds --- for other_vote model\n"
+      "--- 1338.3651518821716 seconds --- for lrda_vote model\n",
+      "training grda_vote model\n"
      ]
     }
    ],
@@ -354,8 +337,9 @@
     "\n",
     "f_train\n",
     "vote_cols=['seizure_vote','lpd_vote','gpd_vote','lrda_vote','grda_vote','other_vote']\n",
-    "models=[RandomForestRegressor(n_estimators=1000, random_state=3,n_jobs=-1, min_samples_split=2) for i in range(len(vote_cols))]\n",
     "train_cols=[col for col in f_train.columns if col not in vote_cols]\n",
+    "vote_cols=vote_cols[:]\n",
+    "models=[RandomForestRegressor(n_estimators=3000, random_state=3,n_jobs=-1, min_samples_split=2) for i in range(len(vote_cols))]\n",
     "for i in range(len(vote_cols)):\n",
     "    start_time = time.time()\n",
     "    \n",
@@ -370,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
